[gd_scene load_steps=2 format=2]

[ext_resource path="res://Object/EnemySpawnManager/EnemySpawnManager.gd" type="Script" id=1]

[node name="EnemySpawnManager" type="Node2D"]
script = ExtResource( 1 )

[node name="BeeSpawningTimeout" type="Timer" parent="."]

[node name="GrubSpawningTimeout" type="Timer" parent="."]

[connection signal="timeout" from="BeeSpawningTimeout" to="." method="_on_BeeSpawningTimeout_timeout"]
[connection signal="timeout" from="GrubSpawningTimeout" to="." method="_on_GrubSpawningTimeout_timeout"]
